Vyrn/Tests/vyrn/let_types_tuple.expect
10 20
false
tests\vyrn/let_types_tuple.vyrn:14: Type error: binding #2 expected number, got string
